@@ -40,7 +40,6 @@ import jenkins.model.Jenkins;
 import jenkins.model.ModelObjectWithChildren;
 import jenkins.model.ModelObjectWithContextMenu;
 import org.acegisecurity.Authentication;
-import org.apache.commons.lang3.StringUtils;
 import org.kohsuke.accmod.Restricted;
 import org.kohsuke.accmod.restrictions.NoExternalUse;
 import org.kohsuke.stapler.StaplerRequest;
@@ -80,15 +79,20 @@ public class Diagnostics implements ModelObjectWithChildren, ModelObjectWithCont
         String url = makeRelativeUrl(context, "buildMemory");
         menu.add(new MenuItem()
                          .withUrl(url)
-                         .withStockIcon("clipboard.png")
+                         .withIconClass("symbol-clipboard-outline plugin-ionicons-api")
                          .withDisplayName(Messages.BuildMemoryReport_DisplayName()));
         url = makeRelativeUrl(context, "eventListeners");
         menu.add(new MenuItem()
                          .withUrl(url)
-                         .withStockIcon("clipboard.png")
+                         .withIconClass("symbol-clipboard-outline plugin-ionicons-api")
                          .withDisplayName(Messages.EventListenersReport_DisplayName()));
         if (isDebugMode()) {
-            menu.add("triggerDebugEvent", "warning.png", "Trigger Debug", false, true);
+            MenuItem item = new MenuItem()
+                                    .withUrl("triggerDebugEvent")
+                                    .withIconClass("symbol-warning plugin-ionicons-api")
+                                    .withDisplayName("Trigger Debug");
+            item.requiresConfirmation = true;
+            menu.add(item);
         }
         return menu;
     }
@@ -101,7 +105,7 @@ public class Diagnostics implements ModelObjectWithChildren, ModelObjectWithCont
      */
     private String makeRelativeUrl(String context, String name) {
         StringBuilder url = new StringBuilder(name);
-        if (!StringUtils.isBlank(context)) {
+        if (context != null && !context.isBlank()) {
             if (!context.endsWith("/")) {
                 url.insert(0, '/');
             }
