@@ -45,7 +45,6 @@ import jenkins.model.Jenkins;
 import jenkins.model.ParameterizedJobMixIn;
 import org.kohsuke.accmod.Restricted;
 import org.kohsuke.accmod.restrictions.NoExternalUse;
-import org.apache.commons.lang.StringUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -124,15 +123,17 @@ public final class EventListener implements GerritEventListener {
         }
         if (event instanceof GerritTriggeredEvent) {
             GerritTriggeredEvent triggeredEvent = (GerritTriggeredEvent)event;
-            if (t.isInteresting(triggeredEvent)) {
-                logger.trace("The event is interesting.");
-                abortBuild(t, triggeredEvent);
-                if (t.isOnlyAbortRunningBuild(triggeredEvent)) {
-                    logger.trace("Just aborting build based on event not scheduling new one.");
-                    return;
+            synchronized (this) {
+                if (t.isInteresting(triggeredEvent)) {
+                    logger.trace("The event is interesting.");
+                    abortBuild(t, triggeredEvent);
+                    if (t.isOnlyAbortRunningBuild(triggeredEvent)) {
+                        logger.trace("Just aborting build based on event not scheduling new one.");
+                        return;
+                    }
+                    notifyOnTriggered(t, triggeredEvent);
+                    schedule(t, new GerritCause(triggeredEvent, t.isSilentMode()), triggeredEvent);
                 }
-                notifyOnTriggered(t, triggeredEvent);
-                schedule(t, new GerritCause(triggeredEvent, t.isSilentMode()), triggeredEvent);
             }
         }
     }
@@ -162,15 +163,17 @@ public final class EventListener implements GerritEventListener {
             // to just return now without processing the event.
             return;
         }
-        if (t.isInteresting(event)) {
-            logger.trace("The event is interesting.");
-            abortBuild(t, event);
-            if (t.isOnlyAbortRunningBuild(event)) {
-                logger.trace("Just aborting build based on event not scheduling new one.");
-                return;
+        synchronized (this) {
+            if (t.isInteresting(event)) {
+                logger.trace("The event is interesting.");
+                abortBuild(t, event);
+                if (t.isOnlyAbortRunningBuild(event)) {
+                    logger.trace("Just aborting build based on event not scheduling new one.");
+                    return;
+                }
+                notifyOnTriggered(t, event);
+                schedule(t, new GerritManualCause(event, t.isSilentMode()), event);
             }
-            notifyOnTriggered(t, event);
-            schedule(t, new GerritManualCause(event, t.isSilentMode()), event);
         }
     }
 
@@ -206,15 +209,17 @@ public final class EventListener implements GerritEventListener {
             // to just return now without processing the event.
             return;
         }
-        if (t.isInteresting(event) && t.commentAddedMatch(event)) {
-            logger.trace("The event is interesting.");
-            abortBuild(t, event);
-            if (t.isOnlyAbortRunningBuild(event)) {
-                logger.trace("Just aborting build based on event not scheduling new one.");
-                return;
+        synchronized (this) {
+            if (t.isInteresting(event) && t.commentAddedMatch(event)) {
+                logger.trace("The event is interesting.");
+                abortBuild(t, event);
+                if (t.isOnlyAbortRunningBuild(event)) {
+                    logger.trace("Just aborting build based on event not scheduling new one.");
+                    return;
+                }
+                notifyOnTriggered(t, event);
+                schedule(t, new GerritCause(event, t.isSilentMode()), event);
             }
-            notifyOnTriggered(t, event);
-            schedule(t, new GerritCause(event, t.isSilentMode()), event);
         }
     }
 
@@ -528,7 +533,7 @@ public final class EventListener implements GerritEventListener {
                         this.keepUndefinedParameters = true;
                     }
                     String safeParameters = System.getProperty(KLASS.getName() + ".safeParameters");
-                    if (!StringUtils.isBlank(safeParameters)) {
+                    if (safeParameters != null && !safeParameters.isBlank()) {
                         safeParameters = safeParameters.toUpperCase(Locale.ENGLISH);
                         boolean declared = true;
                         for (GerritTriggerParameters parameter : GerritTriggerParameters.values()) {
